# github2ntfy

./: README.md  github2ntfy.service  main.py  pyproject.toml
