[tool.poetry]
name = "github2ntfy"
version = "0.1.0"
description = ""
authors = ["Proton <feisuzhu@163.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
fastapi = "^0.87.0"
uvicorn = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
